--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <h1 class="text-lince">Navbar</h1>
             <button id="boton1" class="botonMenu bg-noche text-lince">&#9776;</button>
         </div>
-        <ul class="menu1" id="menu1">
+        <ul class="bg-noche menu1" id="menu1">
             <li><a class="text-lince" href="">inicio</a></li>
             <li><a class="text-lince" href="">productos</a></li>
             <li><a class="text-lince" href="">contactanos</a></li>
@@ -20,16 +20,18 @@
         </ul>
     </nav>
 
-    <div class="card-2">
+    <div class="card-2 pd-s">
         <button class="boton bg-noche text-lince">test</button>
         <a class="boton-r bg-noche text-lince" href="">test a</a>
     </div>
+
+
         <form class="formulario" action="">
-            <input type="text" placeholder="nombre">
-            <input type="text" placeholder="Mail">
-            <input type="text" placeholder="passord">
-            <textarea name="" id="" cols="30" rows="10"></textarea>
-            <input type="button" value="ENviar">
+            <input class="pd-l" type="text" placeholder="nombre">
+            <input class="pd-l" type="text" placeholder="Mail">
+            <input class="pd-l" type="text" placeholder="passord">
+            <textarea class="pd-l" name="" id="" cols="30" rows="10"></textarea>
+            <input class="boton bg-naval text-lince" type="button" value="Enviar">
         </form>
 
     
