--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <nav class="navbar bg-noche">
         <div class="navbar-control">
             <h1 class="text-lince">Navbar</h1>
-            <button id="boton1" class="botonMenu bg-noche text-lince">&#9776;</button>
+            <button  class="navbar-toggle bg-noche text-lince">&#9776;</button>
         </div>
-        <ul class="bg-noche menu1" id="menu1">
+        <ul class="navbar-menu bg-noche">
             <li><a class="text-lince" href="">inicio</a></li>
             <li><a class="text-lince" href="">productos</a></li>
             <li><a class="text-lince" href="">contactanos</a></li>
